Move nav inside header container to fix 1200px overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,13 +190,8 @@ ul {
 /* --- Desktop Nav --- */
 
 .main-nav {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
   display: flex;
   align-items: center;
-  padding-right: var(--container-padding);
 }
 
 .nav-menu {
